--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -258,7 +258,7 @@ Options:
         <p>Derivation goes here:</p>
     </div>
 </DisplayEquationCustom>
-` closed_by_default="True" id="test"/>
+` closed_by_default="True" id="test" closed_height="60"/>
 
 <script src="/about/docs.js" is:inline></script>
 
