did like 75% of the first page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -406,6 +406,29 @@ import Searchbar from "./Searchbar.astro";
                     </div>
                 </div>
             </li>
+            <li class="dropdown mega nav-item ">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="sol">
+                    <span>Thermodynamics</a></span>
+                </a>
+                <div class="dropdown-menu tile-list px-2" id="mainnav-solids"> 
+                    <div class="d-flex" >
+                        <section class="tile menu white-box col">
+                            <h2><a href="/thermodynamics" aria-label="About">Thermodynamics</a></h2>
+                                <ol style="column-fill: balance;" class="course-menu solids-menu">
+                                    <li><a href="/thermodynamics/thermodynamic_systems?origin=sidebar">Thermodynamic Systems</a></li>
+                                    <li><a href="/thermodynamics/substances?origin=sidebar">Substances</a></li>
+                                    <li><a href="/thermodynamics/heat_and_work?origin=sidebar">Heat and Work</a></li>
+                                    <li><a href="/thermodynamics/first_law?origin=sidebar">First Law</a></li>
+                                    <li><a href="/thermodynamics/complex_problems?origin=sidebar">Complex Problems</a></li>
+                                    <li><a href="/thermodynamics/thermodynamic_devices?origin=sidebar">Thermodynamic devices</a></li>
+                                    <li><a href="/thermodynamics/second_law?origin=sidebar">Second Law</a></li>
+                                    <li><a href="/thermodynamics/entropy?origin=sidebar">Entropy</a></li>
+                                    <li><a href="/thermodynamics/cycles?origin=sidebar">Cycles</a></li>
+                                </ol>
+                        </section>
+                    </div>
+                </div>
+            </li>
             <!-- ADD YOUR COURSE HERE -->
         </ul>
         <span class="navbar-text d-flex flex-row justify-content-center align-items-center" style="padding: 8px 10px 10px 10px;"><a class="me-2 fw-bold nav-link" href="/about">About</a></span>
