--- a/src/pages/thermodynamics/thermodynamic_devices.astro
+++ b/src/pages/thermodynamics/thermodynamic_devices.astro
@@ -3,6 +3,11 @@ import Layout from "../../layouts/Layout.astro"
 import Image from "../../components/Image.astro" 
 import Section from "../../components/Section.astro" 
 import SubSection from "../../components/SubSection.astro" 
+import OrangeText from "../../components/OrangeText.astro" 
+import TealText from "../../components/TealText.astro" 
+import Enumerate from "../../components/Enumerate.astro" 
+import Item from "../../components/Item.astro" 
+import Itemize from "../../components/Itemize.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Thermodynamic devices">
